trying to be smart

--- a/content/settings.json
+++ b/content/settings.json
@@ -9,8 +9,8 @@
     "avatar": "../content/images/gatsby.png",
     "bio": "This biography will be used in the footer area of an article and can contain some more details about the author.",
     "social": {
-      "behance": "https://behance.com",
-      "github": "https://github.com/konstantinmuenster",
+      "google": "https://google.com",
+      "github": "https://github.com/yy4me500",
       "medium": "https://konstantinmuenster.medium.com",
       "linkedin": "https://www.linkedin.com/in/konstantin-muenster/",
       "mail": "mailto:mail@konstantin.digital"
